# blackcellmagic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  blackcellmagic.py  pyproject.toml  setup.py
